--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="bg-dark">
+  <nav></nav>
   <main>
     <div class="text-center container">
       <div class="row py-lg-3">
